# pathfix

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
.run/: Build Release.run.xml  Build.run.xml  Clippy.run.xml  Doc.run.xml  Test.run.xml
doc/: .gitignore  Makefile  after_help.txt  pathfix.1.template.md
src/: cli.rs  cli.yml  config.rs  config.toml  config.txt  config.yml  lib.rs  main.rs  path.rs
src/config/: config_source.rs  include_administrative.rs  mod.rs  path.rs  path_flags.rs
tests/: cmd_test.rs  small.toml
tests/a/: README.md
