[package]
name = "pathfix"
description = "Fixes the $PATH variable mess by generating it for you"
version = "0.1.1"
authors = ["Raphael Peters <rappet@rappet.de>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/rappet/pathfix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.33.1" }
serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "0.8"

[profile.release]
lto = true

[package.metadata.deb]
extended-description = """\
Fixes the PATH variable mess.\
\
Pathfix will\
\
- remove duplicate entries in $PATH\
- automatically find other entries for $PATH"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/pathfix", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/pathfix/README", "644"],
    ["doc/pathfix.1", "/usr/share/man/man1/pathfix.1.gz", "644"],
]
