[package]
name = "pathfix"
description = "Fixes the $PATH variable mess by generating it for you"
version = "0.1.4-alpha.0"
authors = ["Raphael Peters <rappet@rappet.de>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/rappet/pathfix"

[lib]
name = "pathfix"
path = "src/lib.rs"

[[bin]]
name = "pathfix"
path = "src/bin/pathfix/main.rs"

[features]
logging = ["env_logger"]

[dependencies]
clap = { version = "~2.33.1" }
serde = { version = "~1.0", features = ["derive"] }
toml = "0.5.6"
log = "0.4.11"
env_logger = { version = "0.7.1", optional = true }
users = "0.10.0"

[dev-dependencies]
assert_cmd = "1.0.1"

[profile.release]
lto = true
panic = "abort"

[package.metadata.deb]
extended-description = """\
Fixes the PATH variable mess.\
\
Pathfix will\
\
- remove duplicate entries in $PATH\
- automatically find other entries for $PATH"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/pathfix", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/pathfix/README", "644"],
    ["doc/pathfix.1.gz", "usr/share/man/man1/pathfix.1.gz", "644"],
    ["src/config.toml", "etc/pathfix.toml", "644"]
]
